made a small change on readme

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -8,7 +8,7 @@
 //   3. The Grid
 //   4. Base Typography
 //   5. Typography Helpers
-//   6. Abide
+//   6. AbideProject repository
 //   7. Accordion
 //   8. Accordion Menu
 //   9. Badge
